--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -8,14 +8,16 @@
 
     <TextView
         android:id="@+id/lblRecord"
-        android:layout_width="283dp"
-        android:layout_height="wrap_content"
+        android:layout_width="136dp"
+        android:layout_height="20dp"
         android:text="Tap and Hold to record"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.711" />
+        app:layout_constraintVertical_bias="0.711"
+        android:autoSizeTextType="uniform"/>
 
     <Button
         android:id="@+id/btnRecord"
