--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -21,14 +21,16 @@
 
     <Button
         android:id="@+id/btnRecord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hold to record"
+        android:layout_width="47dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginLeft="188dp"
+        android:drawableStart="@drawable/ic_mic_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.658" />
+        app:layout_constraintVertical_bias="0.655" />
 
     <EditText
         android:id="@+id/txtName"
